add UpdateProjectSurfacesUseCase
