# backend/docs/swagger.yaml
@@ -379,6 +379,30 @@ definitions:
       user_id:
         type: integer
     type: object
+  dto.UpdateProjectSurfaceRequest:
+    properties:
+      name:
+        type: string
+      scale:
+        type: number
+    type: object
+  dto.UpdateProjectSurfaceResponse:
+    properties:
+      created_at:
+        type: string
+      geometry:
+        $ref: '#/definitions/dto.PolygonGeometry'
+      id:
+        type: integer
+      name:
+        type: string
+      project_id:
+        type: integer
+      source_surface_id:
+        type: integer
+      updated_at:
+        type: string
+    type: object
   dto.UpdateSurfaceRequest:
     properties:
       geometry:
@@ -805,6 +829,53 @@ paths:
       security:
       - BearerAuth: []
       summary: Get ProjectSurface by ID
+    patch:
+      consumes:
+      - application/json
+      description: Update Project Surface
+      parameters:
+      - description: Project Surface ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: integer
+      - description: Project Surface
+        in: body
+        name: surface
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateProjectSurfaceRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.UpdateProjectSurfaceResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httperror.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httperror.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httperror.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httperror.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update Project Surface
   /api/v1/surfaces:
     get:
       description: List Surfaces
