# backend/internal/transport/http/handler/project_surface.go
@@ -17,17 +17,20 @@ type ProjectSurfaceHandler struct {
 	createProjectSurfaceUseCase  *projectsurfaceusecase.CreateProjectSurfaceUseCase
 	getProjectSurfaceByIDUseCase *projectsurfaceusecase.GetProjectSurfaceByIDUseCase
 	listProjectSurfacesUseCase   *projectsurfaceusecase.ListProjectSurfacesUseCase
+	updateProjectSurfaceUseCase  *projectsurfaceusecase.UpdateProjectSurfaceUseCase
 }
 
 func NewProjectSurfaceHandler(
 	createProjectSurfaceUseCase *projectsurfaceusecase.CreateProjectSurfaceUseCase,
 	getProjectSurfaceByIDUseCase *projectsurfaceusecase.GetProjectSurfaceByIDUseCase,
 	listProjectSurfacesUseCase *projectsurfaceusecase.ListProjectSurfacesUseCase,
+	updateProjectSurfaceUseCase *projectsurfaceusecase.UpdateProjectSurfaceUseCase,
 ) *ProjectSurfaceHandler {
 	return &ProjectSurfaceHandler{
 		createProjectSurfaceUseCase:  createProjectSurfaceUseCase,
 		getProjectSurfaceByIDUseCase: getProjectSurfaceByIDUseCase,
 		listProjectSurfacesUseCase:   listProjectSurfacesUseCase,
+		updateProjectSurfaceUseCase:  updateProjectSurfaceUseCase,
 	}
 }
 
@@ -266,4 +269,87 @@ func (h *ProjectSurfaceHandler) ListProjectSurfaces(c fiber.Ctx) error {
 	listProjectSurfacesResp := mapper.ToListProjectSurfacesResponse(outputListProjectSurfacesUseCase)
 
 	return c.Status(fiber.StatusOK).JSON(listProjectSurfacesResp)
+}
+
+// godoc: UpdateProjectSurface godoc
+// @Summary Update Project Surface
+// @Description Update Project Surface
+// @Accept json
+// @Produce json
+// @Param id path int true "Project Surface ID"
+// @Param project_id path int true "Project ID"
+// @Param surface body dto.UpdateProjectSurfaceRequest true "Project Surface"
+// @Success 200 {object} dto.UpdateProjectSurfaceResponse
+// @Failure 400 {object} httperror.ErrorResponse
+// @Failure 401 {object} httperror.ErrorResponse
+// @Failure 404 {object} httperror.ErrorResponse
+// @Failure 500 {object} httperror.ErrorResponse
+// @Resource ProjectSurfaces
+// @Security BearerAuth
+// @Router /api/v1/projects/{project_id}/surfaces/{id} [patch]
+func (h *ProjectSurfaceHandler) Update(c fiber.Ctx) error {
+	id, err := strconv.ParseInt(c.Params("id"), 10, 64)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation(
+				"invalid id",
+				apperror.NewFieldError(
+					"id",
+					apperror.FieldCodeInvalid,
+					"id must be a valid positive integer",
+				),
+			),
+		)
+	}
+
+	projectID, err := strconv.ParseInt(c.Params("project_id"), 10, 64)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation(
+				"invalid project id",
+				apperror.NewFieldError(
+					"project_id",
+					apperror.FieldCodeInvalid,
+					"project_id must be a valid positive integer",
+				),
+			),
+		)
+	}
+
+	var projectSurfaceReq dto.UpdateProjectSurfaceRequest
+	err = c.Bind().Body(&projectSurfaceReq)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			apperror.Validation("invalid request body"),
+		)
+	}
+
+	userID := c.Locals(middleware.UserIDLocalKey)
+	u, ok := userID.(int64)
+	if !ok {
+		return httperror.Handle(
+			c,
+			apperror.Internal("failed to get user id from request context", errors.New("user_id local is missing or invalid")),
+		)
+	}
+
+	inputUpdateProjectSurfaceUseCase := mapper.ToUpdateProjectSurfaceInput(projectSurfaceReq, u, projectID, id)
+
+	outputUpdateProjectSurfaceUseCase, err := h.updateProjectSurfaceUseCase.Execute(
+		c.Context(),
+		inputUpdateProjectSurfaceUseCase,
+	)
+	if err != nil {
+		return httperror.Handle(
+			c,
+			err,
+		)
+	}
+
+	updateProjectSurfaceResp := mapper.ToUpdateProjectSurfaceResponse(outputUpdateProjectSurfaceUseCase)
+
+	return c.Status(fiber.StatusOK).JSON(updateProjectSurfaceResp)
 }
